--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -268,7 +268,7 @@
 }
 
 .libraryViewNav .ui-btn-active {
-    border-bottom-color: #38c;
+    border-bottom-color: #52B54B;
     color: #fff !important;
 }
 
