fix sync status display

--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -233,3 +233,6 @@ paper-tab {
 .nowPlayingPage {
     padding-top: 50px !important;
 }
+.localSyncStatus .labelSyncStatus {
+    display: none !important;
+}
