fix marking seasons unplayed

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -18,7 +18,8 @@
 
 .background-theme-b {
     background-color: #242424;
-    background: -webkit-radial-gradient(circle, #282828, #202020);
+    background: radial-gradient(circle, #282828, #141414) !important;
+    background-attachment: fixed;
 }
 
 .ui-body-b {
