--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -33,7 +33,8 @@ body {
 }
 
 .background-theme-b {
-    background-color: #161616;
+    background: radial-gradient(circle, #303030, #101010) !important;
+    background-attachment: fixed;
 }
 
 .backdropContainer .pageBackground {
