--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/android.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/android.css
@@ -7,7 +7,8 @@
     }
 
 .background-theme-b {
-    background-color: #202020;
+    background: radial-gradient(circle, #282828, #141414) !important;
+    background-attachment: fixed;
 }
 
 .backdropContainer .pageBackground {
