--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/android.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/android.css
@@ -6,9 +6,8 @@
         background-color: rgba(15, 15, 15, .50);
     }
 
-.background-theme-b {
-    background: radial-gradient(circle, #282828, #141414) !important;
-    background-attachment: fixed;
+.background-theme-b, paper-dialog.background-theme-b {
+    background: #202020;
 }
 
 .backdropContainer .pageBackground {
