--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -1023,19 +1023,22 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 }
 
 .playedIndicator {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 5px;
     right: 5px;
     text-align: center;
     vertical-align: middle;
-    width: 24px;
-    height: 24px;
+    width: 26px;
+    height: 26px;
     border-radius: 50%;
     color: #fff;
     background: rgb(82, 181, 75);
-    background: rgba(82, 181, 75, .9);
-    line-height: 19px;
+    background: rgba(82, 181, 75, .95);
+    line-height: 21px;
+    line-height: initial;
     font-weight: 500;
 }
 
@@ -1043,11 +1046,6 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
         margin-top: 5px;
         display: inline-block;
     }
-
-.textIndicator {
-    height: 22px;
-    padding-top: 2px;
-}
 
 .mediaSourceIndicator {
     display: block;
@@ -1533,10 +1531,6 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 }
 
 .studioTabDisabled .tvStudiosTab, .studioTabDisabled .movieStudiosTab {
-    display: none !important;
-}
-
-.peopleTabDisabled .tvPeopleTab, .peopleTabDisabled .moviePeopleTab {
     display: none !important;
 }
 
