--- a/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer-video.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer-video.css
@@ -65,7 +65,7 @@
     padding-top: .5em;
 }
 
-    .videoAdvancedControls iron-icon {
+    .videoAdvancedControls paper-icon-button {
         width: 30px;
         height: 30px;
     }
