make tv guide standalone component

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
@@ -2,6 +2,10 @@
     background: #161616;
 }
 
+.tvGuide {
+    text-align: left;
+}
+
 .tvGuideHeader {
     white-space: nowrap;
     position: fixed;
