--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -33,7 +33,7 @@ body {
 }
 
 .background-theme-b, paper-dialog.background-theme-b {
-    background: radial-gradient(circle, #282828, #101010);
+    background: #181818;
 }
 
 .backdropContainer .pageBackground {
