update library setup

--- a/MediaBrowser.WebDashboard/dashboard-ui/components/medialibrarycreator/medialibrarycreator.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/medialibrarycreator/medialibrarycreator.template.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div>
-        <paper-input type="text" id="txtValue" required="required" label="${LabelName}"></paper-input>
+        <paper-input type="text" id="txtValue" required="required" label="${LabelDisplayName}"></paper-input>
     </div>
     <div>
         <paper-input type="text" id="txtPath" required="required" label="${LabelFolder}" style="display: inline-block;width:84%;"></paper-input>
