--- a/MediaBrowser.WebDashboard/dashboard-ui/components/medialibrarycreator/medialibrarycreator.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/medialibrarycreator/medialibrarycreator.template.html
@@ -9,11 +9,16 @@
     <div>
         <paper-input type="text" id="txtValue" required="required" label="${LabelDisplayName}"></paper-input>
     </div>
+    <br />
     <div>
-        <paper-input type="text" id="txtPath" required="required" label="${LabelFolder}" style="display: inline-block;width:84%;"></paper-input>
-        <paper-icon-button id="btnSelectPath" icon="search"></paper-icon-button>
-        <div class="fieldDescription">${LabelAdditionalFoldersCanBeAddedHelp}</div>
+        <h1 style="display:inline-block;vertical-align:middle;">${HeadersFolders}</h1>
+        <paper-button raised class="btnAddFolder submit mini" style="margin-left:1em;" title="${ButtonAdd}">
+            <iron-icon icon="add"></iron-icon>
+            <span>${ButtonAdd}</span>
+        </paper-button>
     </div>
+    <div class="paperList folderList hide" style="padding: .7em 0;"></div>
+
     <br />
     <div>
         <button type="submit" class="clearButton" data-role="none">
