--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -200,6 +200,10 @@
         background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%) !important; /* W3C */
     }
 
+        .cardContent .cardFooter:not(.fullCardFooter) {
+            background: rgba(0, 0, 0, .5) !important;
+        }
+
 .lightCardFooter {
     background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%) !important; /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.7))) !important; /* Chrome,Safari4+ */
@@ -247,7 +251,7 @@
 }
 
 .cardContent .cardFooter .cardText {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .cardOverlayInner {
