--- a/MediaBrowser.WebDashboard/dashboard-ui/devices/ie/ie.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/devices/ie/ie.css
@@ -1,7 +1,3 @@
-﻿paper-icon-button {
-    height: 24px;
-}
-
-paper-fab.keyboard-focus.paper-fab-0 {
+﻿paper-fab.keyboard-focus.paper-fab-0 {
     background: #444;
 }
