update image sizes

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -304,7 +304,7 @@
     }
 
 .coveredCardImage {
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center center;
 }
 
