--- a/MediaBrowser.WebDashboard/dashboard-ui/css/nowplayingbar.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/nowplayingbar.css
@@ -1,4 +1,58 @@
-﻿/* Now playing bar */
+﻿.nowPlayingText {
+    display: inline-block;
+    font-weight: normal;
+    position: relative;
+    top: -7px;
+    margin: 0 0 0 3px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    vertical-align: middle;
+    text-align: left;
+    font-size: 15px;
+    max-width: 130px;
+}
+
+.mediaButton.infoButton {
+    width: 34px;
+    height: 34px;
+}
+
+.mediaButton.active {
+    color: #52B54B;
+}
+
+@media (min-width: 500px) {
+    .nowPlayingText {
+        max-width: 180px;
+    }
+}
+
+@media (min-width: 600px) {
+    .nowPlayingText {
+        max-width: 200px;
+    }
+}
+
+@media (min-width: 800px) {
+    .nowPlayingText {
+        margin-right: 30px;
+    }
+}
+
+.mediaButton img {
+    height: 24px;
+}
+
+.currentTime {
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 110px;
+    margin-right: 2em;
+    font-weight: normal;
+}
+
+/* Now playing bar */
 .nowPlayingBar {
     border-top: 1px solid #444;
     text-align: center;
