--- a/MediaBrowser.WebDashboard/dashboard-ui/voice/voice.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/voice/voice.css
@@ -33,13 +33,8 @@
     margin: 1em 0;
 }
 
-    .exampleCommand .fa {
-        vertical-align: middle;
-        color: #38c;
-    }
-
 .exampleCommandText {
-    margin: 0 1em;
+    padding-left: .25em;
 }
 
 .defaultVoiceHelp {
