--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -1546,7 +1546,7 @@ progress {
     z-index: 9999998;
 }
 
-.nativeApp * {
+.nativeApp *:not(input):not(select):not(textarea) {
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
