--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -463,11 +463,15 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 }
 
 .itemDetailImage {
-    -moz-box-shadow: 0px 0 20px #000;
-    -webkit-box-shadow: 0px 0 20px #000;
-    box-shadow: 0px 0 20px #000;
-    border: solid 1px #222;
+    border: solid 1px transparent;
 }
+
+    .itemDetailImage.loaded {
+        -moz-box-shadow: 0px 0 20px #000;
+        -webkit-box-shadow: 0px 0 20px #000;
+        box-shadow: 0px 0 20px #000;
+        border: solid 1px #222;
+    }
 
 .detailImageContainer img {
     width: 280px;
