update header text

--- a/MediaBrowser.WebDashboard/dashboard-ui/components/recordingcreator/recordingcreator.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/recordingcreator/recordingcreator.template.html
@@ -1,7 +1,7 @@
 ﻿<div class="dialogHeader">
     <paper-icon-button icon="close" class="btnCancel"></paper-icon-button>
     <div class="dialogHeaderTitle">
-        New Recording
+        ${HeaderNewRecording}
     </div>
 </div>
 
